--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+
+.ant-table-filter-dropdown {
+  width: 320px!important;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
